css/style.css
/* ... */
	/* All list carat */
	
	.fa.fa-angle-down {
		font-size: 1.5rem;
		font-weight: bold;
	}
	/*
	li .fa.fa-angle-down:before {
		content: "\00a0";
	}
*/
	
	nav ul {
		font-size: 0;
		list-style-type: none;
	}
	/* Navbar Menu headings */
	
	nav ul li {
		font-family: "Open Sans", sans-serif;
		font-size: 1.25rem;
		font-weight: 400;
		/*	color: #333;*/
		color: #9a9696;
		color: #fff;
		display: inline-block;
		padding: 15px;
		position: relative;
		-webkit-transition: background-color .5s;
		transition: background-color .5s;
	}
	/* Behavior (color change) when you hover on main Navbar elments */
	
/*
	nav ul li:hover {
		cursor: pointer;
		background-color: #2cb5a3;
		background-color: #2C9893;
	}
*/

	/* -------Test ---------*/
	.dropDownActive {
		cursor: pointer;
		background-color: #2cb5a3;
		background-color: #2C9893;
	}


	/* Make Task list nav bar element same width as it's dropdown list elements */
	
/*
	#taskListDropdown:hover {
		width: 250px;
	}
*/

	#taskListDropdown {
		width: 250px;
	}
	/* Icons used on nav bar */
	
	nav ul li .fa {
		color: #fff;
	}

	/* Hide Nav bar drop down menu until clicked on  */
	
	nav ul li ul {
		display: none;
		/*	opacity: 0;*/
	}
	/* DROPDOWN MENUS */
	/* Display drop down menu elements on hover */
	
	
/*
	nav ul li:hover ul {
		z-index: 1;
		display: block;
		width: 250px;
		left: 0;
		position: absolute;
		-webkit-animation: opacity 700ms ease-in-out normal;
		animation: subMenus 1000ms ease-in-out normal;
	}
*/

nav ul {
	margin-bottom: 0 !important;
}

	.taskListsSubMenu {
		z-index: 1;
		display: block;
		width: 250px;
		left: 0;
		top: 3.75rem;
		position: absolute;
		-webkit-animation: opacity 700ms ease-in-out normal;
		animation: subMenus 1000ms ease-in-out normal;
	}
	
	/*
  Defines animation effect for display of drop down menus.
 */
	
	@-webkit-keyframes subMenus {
		from {
			opacity: 0;
		}
		to {
			opacity: 1;
		}
	}
	
	@keyframes subMenus {
		from {
			opacity: 0;
		}
		to {
			opacity: 1;
		}
	}
	/* Styling of subMenu elements on hover */
	
	nav ul li:hover ul li {
		display: block;
		/*	background-color: #44e3ce;*/
		background-color: #34AFA9;
	}

	/* -------Test ---------*/

	nav ul li ul li {
		display: block;
		/*	background-color: #44e3ce;*/
		background-color: #34AFA9;
	}
	/* Test99999*/
	/*
	nav ul li ul.hideIt li {
		display: none;
	}
*/
	/* Darken background of submenu element when selected	*/
	/* selected class is added and removed via JS */
	
	nav ul li:hover ul li.selected {
		display: block;
		/*	background-color: #44e3ce;*/
		background-color: #34AFA9;
		background-color: #2C9893;
		background-color: #44e3ce;
		background-color: #1d635f;
		/*
		border-top: white solid 2px;
		border-bottom: white solid 2px;
*/
	}
	/* -------Test ---------*/

	nav ul li ul li.selected {
		display: block;
		/*	background-color: #44e3ce;*/
		background-color: #34AFA9;
		background-color: #2C9893;
		background-color: #44e3ce;
		background-color: #1d635f;
		/*
		border-top: white solid 2px;
		border-bottom: white solid 2px;
*/
	}

	/* Create separation line between last submenu element and other elements */
	
	nav ul li:hover ul li:last-child {
		border-top: solid 1px #44e3ce;
	}

	/* -------Test ---------*/
	nav ul li ul li:last-child {
		border-top: solid 1px #44e3ce;
	}


	/* Reduce space between stacked icons on NewList and words "New List" to be more consistent */
	
	nav ul li:hover ul a li:last-of-type span {
		width: 1.6rem;
		margin-right: 1px;
	}

	/* -------Test ---------*/
	nav ul li ul a li:last-of-type span {
		width: 1.6rem;
	}
	
	nav a:link,
	a:visited,
	a:hover,
	a:active {
		text-decoration: none;
		color: #fff;
	}
	
	nav .fa-stack-1x,
	nav .fa-stack-2x {
		position: absolute;
		left: 0;
		width: 0%;
		height: 90%;
		text-align: center;
	}


	
	nav i.fa.fa-plus-circle.fa-stack-1x.newSymbol {
		position: relative;
		font-size: .9em;
		top: 10px;
		left: 14px;
		border-radius: 100%;
		background-color: #f5f2f2;
	}
	/* Don't darken background of search icon like other menu items cause size is small*/
	
	nav ul li:hover.searchIt {
		display: block;
		background-color: #f9f9f9;
	}
	/* Place and style task overdue counts on task list submenu */
	
	nav ul li:hover ul li span.overDueCount {
		font-family: 'Roboto Mono', monospace;
		float: right;
		color: #f9f9f9;
/*		background-color: #e46767;*/
		padding: 4px 8px;
		text-align: center;
		font-size: .8rem;
		border-radius: 30%;
	}

	/* -------Test ---------*/
	nav ul li ul li span.overDueCount {
		font-family: 'Roboto Mono', monospace;
		float: right;
		color: #f9f9f9;
/*		background-color: #e46767;*/
		padding: 4px 8px;
		text-align: center;
		font-size: .8rem;
		border-radius: 30%;
	}


.overDueItemsPresent {
	background-color: #e46767;
	
	}

	/* Auto Place "+" sign before overdue task total */
	
/*
	nav ul li:hover ul li span.overDue::before {
		font-family: "FontAwesome";
		color: #fff;
		font-weight: 100;
		content: "\f067";
	}
*/
	/* Place & Style non-overdue task totals */
	
	nav ul li:hover ul li span.listTotal {
		font-family: 'Roboto Mono', monospace;
		float: right;
		color: #f9f9f9;
		padding: 1px 5px;
		text-align: center;
		font-size: 1.2rem;
		border-radius: 3px;
		margin-left: .3rem;
	}

	/* -------Test ---------*/
	nav ul li ul li span.listTotal {
		font-family: 'Roboto Mono', monospace;
		float: right;
		color: #f9f9f9;
		padding: 1px 5px;
		text-align: center;
		font-size: 1.2rem;
		border-radius: 3px;
		margin-left: .3rem;
	}




	/* Add space after task totals to sep from overdue counts */
	/*	Test adding plus after listtotal */
	
	nav ul li:hover ul li span.listTotal:after {
		font-family: "FontAwesome";
		font-weight: 100;
		font-size: .75rem;
/*		content: "\00a0 \00a0 \f067 \00a0";*/
/*		content: "\00a0";*/
	}


	/* -------Test ---------*/

	nav ul li ul li span.listTotal:after {
		font-family: "FontAwesome";
		font-weight: 100;
		font-size: .75rem;
/*		content: "\00a0 \00a0 \f067 \00a0";*/
/*		content: "\00a0";*/
	}
/* ... */

